--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,7 @@ body {
   font-family: Inter Tight, sans-serif;
   justify-content: start;
   padding: 50px 100px;
-  background-color: #7A3145;
+  background-color: #7a3145;
 }
 /* section2 css başlangıç */
 
@@ -268,7 +268,7 @@ body {
 }
 
 .section-second-first-part-img {
-height: 450px;
+  height: 450px;
   box-sizing: content-box;
   margin-left: 0px;
   margin-top: 0px;
@@ -290,8 +290,24 @@ height: 450px;
   background-color: #576f35;
 }
 
+/* .section-second-second-part-internal{
+  box-sizing: content-box;
+  width: 450px;
+  height: 499px;
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  
+} */
 
 .section-second-second-part-header {
+  box-sizing: content-box;
+  width: 335px;
+  height: 112px;
+  padding-top: 80px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-family: "Inter Tight", sans-serif;
   font-size: 32px;
   font-weight: 600;
@@ -303,9 +319,9 @@ height: 450px;
 }
 
 .section-second-second-part-header h1 {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 600;
-  line-height: 32px;
+  line-height: 28px;
   letter-spacing: -0.015em;
   text-align: left;
   text-transform: uppercase;
@@ -313,9 +329,9 @@ height: 450px;
 }
 
 .section-second-second-part-header span {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 600;
-  line-height: 32px;
+  line-height: 28px;
   letter-spacing: -0.015em;
   text-align: left;
   text-transform: uppercase;
@@ -323,226 +339,271 @@ height: 450px;
 }
 
 .section-second-second-part-text {
-  font-size: 16px;
+  box-sizing: content-box;
+  width: 335px;
+  height: 54px;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 18px;
   text-align: left;
-  color: #fbfbfb;
+  color: rgba(251, 251, 251, 1);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.section-second-second-part-steps {
+  box-sizing: content-box;
+  width: 335px;
+  height: 268px;
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 80px;
 }
 
 .section-second-second-part-first-step {
+  padding-left: 24px;
 
+  padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 335px;
+  height: 76px;
   background-color: #fbfbfb;
+  margin-bottom: 20px;
   border-radius: 15px;
   gap: 24px;
+  display: flex;
+  flex-direction: row;
 }
 
 .section-second-second-part-second-step {
+  padding-left: 24px;
+  padding-right: 0px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 335px;
+  height: 76px;
   background-color: #fbfbfb;
+  margin-bottom: 20px;
   border-radius: 15px;
-  display: flex;
   gap: 24px;
+  display: flex;
+  flex-direction: row;
 }
 
 .section-second-second-part-third-step {
+  padding-left: 24px;
+  padding-right: 0px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 335px;
+  height: 76px;
   background-color: #fbfbfb;
+  margin-bottom: 20px;
   border-radius: 15px;
+  gap: 24px;
+  display: flex;
+  flex-direction: row;
 }
 
 .section-second-second-part-first-step-p {
-  font-family: Inter Tight;
-  font-size: 16px;
+  width: 208px;
+  height: 42px;
+  color: #14141499;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 14px;
   letter-spacing: -0.02em;
   text-align: left;
-  color: #14141499;
+  padding-top: 5px;
 }
 
 .section-second-second-part-second-step-p {
-  font-size: 16px;
+  width: 176px;
+  height: 28px;
+  color: #14141499;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 14px;
   letter-spacing: -0.02em;
   text-align: left;
+  padding-top: 12px;
+}
+
+.section-second-second-part-third-step-p {
+  width: 211px;
+  height: 28px;
   color: #14141499;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  padding-top: 12px;
 }
 
 .reviews-section {
-    background-color: #fbfbfb;
-    padding: 100px;
+  background-color: #fbfbfb;
+  padding: 100px;
 }
 
 .reviews-content {
-    display: flex;
-    flex-direction: column;
-    max-width: 553px;
-    color: #141414;
+  display: flex;
+  flex-direction: column;
+  max-width: 553px;
+  color: #141414;
 }
 
 .reviews-title {
   width: 553px;
-    font-weight: 600;
-    font-size: 64px;
-    letter-spacing: -0.96px;
-    text-transform: uppercase;
-    line-height: 64px;
+  font-weight: 600;
+  font-size: 64px;
+  letter-spacing: -0.96px;
+  text-transform: uppercase;
+  line-height: 64px;
 }
 
 .reviews-subtitle {
-    margin-top: 25px;
-    font: 500 16px/20px "Inter Tight", -apple-system, Roboto, Helvetica, sans-serif;
+  margin-top: 25px;
+  font: 500 16px/20px "Inter Tight", -apple-system, Roboto, Helvetica,
+    sans-serif;
 }
 
 .reviews-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-top: 50px;
 }
 
 .review-card {
-    border-radius: 24px;
-    background-color: #fbfbfb;
-    border: 1px solid rgba(122, 49, 69, 0.3);
-    padding: 20px;
-    width: 343px;
-    min-height: 258px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  border-radius: 24px;
+  background-color: #fbfbfb;
+  border: 1px solid rgba(122, 49, 69, 0.3);
+  padding: 20px;
+  width: 343px;
+  min-height: 258px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .review-image {
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .review-content {
-    margin-top: 24px;
-    text-align: center;
-    font-family: "Inter Tight", sans-serif;
+  margin-top: 24px;
+  text-align: center;
+  font-family: "Inter Tight", sans-serif;
 }
 
 .reviewer-name {
-    color: #141414;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 1.1;
-    letter-spacing: -0.36px;
+  color: #141414;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.1;
+  letter-spacing: -0.36px;
 }
 
 .review-text {
-    color: rgba(20, 20, 20, 0.4);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 22px;
-    margin-top: 8px;
+  color: rgba(20, 20, 20, 0.4);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  margin-top: 8px;
 }
 
 .highlight {
-    color: #576f35;
+  color: #576f35;
 }
 
 @media (max-width: 991px) {
-    .reviews-section {
-        padding: 0 20px;
-    }
+  .reviews-section {
+    padding: 0 20px;
+  }
 
-    .reviews-title {
-        font-size: 40px;
-        line-height: 44px;
-    }
+  .reviews-title {
+    font-size: 40px;
+    line-height: 44px;
+  }
 
-    .reviews-grid {
-        margin-top: 40px;
-    }
+  .reviews-grid {
+    margin-top: 40px;
+  }
 }
 
 /* CSS */
 .harvest-container {
-  background-color: #722F37;
+  background-color: #722f37;
   padding: 40px;
   color: white;
   font-family: Arial, sans-serif;
 }
 
-.section-second-second-part-third-step-p {
-  width: 323px;
-  height: 40px;
-  font-family: Inter Tight;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: -0.02em;
-  text-align: left;
-  color: #14141499;
-  padding: 1%;
-}
-
 .section-second-second-part-first-step-p span {
+  color: #141414;
   font-family: Inter Tight;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 14px;
   letter-spacing: -0.02em;
   text-align: left;
-  color: #141414;
 }
-
 
 .section-second-second-part-second-step-p span {
+  color: #141414;
   font-family: Inter Tight;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 14px;
   letter-spacing: -0.02em;
   text-align: left;
-  color: #141414;
 }
-
 
 .section-second-second-part-third-step-p span {
+  color: #141414;
   font-family: Inter Tight;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 14px;
   letter-spacing: -0.02em;
   text-align: left;
-  color: #141414;
 }
 
-.section-second-second-part-first-step-img{
+.section-second-second-part-first-step-img {
   width: 100px;
-    height: 76px;
+  height: 76px;
   box-sizing: border-box;
   padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-right: 24px;
 }
 
-.section-second-second-part-second-step-img{
+.section-second-second-part-second-step-img {
   width: 100px;
   height: 76px;
-box-sizing: border-box;
+  box-sizing: border-box;
   padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-right: 24px;
 }
 
-
-.section-second-second-part-third-step-img{
+.section-second-second-part-third-step-img {
   width: 100px;
   height: 76px;
-box-sizing: border-box;
+  box-sizing: border-box;
   padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-right: 24px;
 }
 
 .menu-contact {
@@ -649,24 +710,21 @@ box-sizing: border-box;
   margin: auto 0;
   color: rgba(251, 251, 251, 0.5);
   text-decoration: none;
-  ;
 }
 
 .privacy-policy a:visited,
-
 a:active {
   color: rgba(251, 251, 251, 0.5);
   text-decoration: none;
 }
 
-.contacts-footer a:link{
+.contacts-footer a:link {
   color: rgba(251, 251, 251, 1);
   text-decoration: none;
 }
 
-
 .harvest-container {
-  background-color: #7A3145;
+  background-color: #7a3145;
   padding: 100px;
   color: white;
 }
@@ -684,7 +742,6 @@ a:active {
   gap: 25px;
   margin-left: 25px;
   margin-top: 25px;
-  
 }
 
 .text-white {
@@ -692,7 +749,7 @@ a:active {
 }
 
 .text-gray {
-  color: #A9A9A9;
+  color: #a9a9a9;
 }
 
 .subtitle {
@@ -710,13 +767,12 @@ a:active {
   opacity: 0px;
   margin-bottom: 30px;
   max-width: 800px;
-font-size: 16px;
-font-weight: 500;
-line-height: 20px;
-text-align: left;
-margin-left: 25px;
-margin-bottom: 50px;
-
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: left;
+  margin-left: 25px;
+  margin-bottom: 50px;
 }
 
 .boxes-container {
@@ -727,13 +783,13 @@ margin-bottom: 50px;
 
 /* Form Container Styles */
 .form-container {
-  background-color:#FBFBFB;
+  background-color: #fbfbfb;
   padding: 50px;
   border-radius: 30px;
   flex: 1;
   width: 529px;
   height: 534px;
-  gap: 10px;;
+  gap: 10px;
 }
 
 .form-title {
@@ -742,34 +798,32 @@ margin-bottom: 50px;
   margin-bottom: 25px;
   line-height: 26px;
   width: 428px;
-height: 78px;
-gap: 0px;
-opacity: 0px;
-font-weight: 600px;
-letter-spacing: -1.5%;
-margin-left:25px;
+  height: 78px;
+  gap: 0px;
+  opacity: 0px;
+  font-weight: 600px;
+  letter-spacing: -1.5%;
+  margin-left: 25px;
 }
 
-.fromus{
-  color: #7A3145;
+.fromus {
+  color: #7a3145;
   letter-spacing: -1.5%;
 }
 
-.theform{
-  color: #576F35;
+.theform {
+  color: #576f35;
   letter-spacing: -1.5%;
 }
-.form-input::placeholder{
-  
-font-size: 16px;
-font-weight: 500;
-line-height: 20px;
-letter-spacing: -0.02em;
-color: #141414;
+.form-input::placeholder {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #141414;
 }
 
 .form-textarea::placeholder {
-  
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
@@ -783,23 +837,23 @@ color: #141414;
 }
 
 .form-group {
-width: 429px;
-gap: 10px;
+  width: 429px;
+  gap: 10px;
 
   width: 429px;
-height: 52px;
-gap: 10px;
-
+  height: 52px;
+  gap: 10px;
 }
 
-.form-input, .form-textarea {
+.form-input,
+.form-textarea {
   width: 429px;
   padding: 12px;
-  border-radius:30px;
+  border-radius: 30px;
   font-size: 1em;
   border: 1px solid #14141433;
-  margin-bottom:10px;
-  margin-left:10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 .form-textarea {
@@ -821,19 +875,19 @@ gap: 10px;
   font-size: 1em;
   cursor: pointer;
   transition: background-color 0.3s;
-  width: 429px; 
+  width: 429px;
   height: 52px;
   margin-left: 10px;
   margin-right: 10px;
 }
 
 .submit-btn:hover {
-  background-color: #4A6432;
+  background-color: #4a6432;
   border-radius: 15px;
 }
 
 .submit-btn {
-  background-color: #5C7C3E;
+  background-color: #5c7c3e;
   color: white;
   padding: 12px;
   border: none;
@@ -841,27 +895,24 @@ gap: 10px;
   cursor: pointer;
   transition: background-color 0.3s;
   width: 100%;
-  margin-top:190px;
+  margin-top: 190px;
   width: 429px;
-height: 52px;
-gap: 10px;
-border-radius: 30px;
-opacity: 0px;
-margin-left:28px;
-font-size: 18px;
-font-weight: 600;
-line-height: 20px;
-letter-spacing: -0.015em;
+  height: 52px;
+  gap: 10px;
+  border-radius: 30px;
+  opacity: 0px;
+  margin-left: 28px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: -0.015em;
 }
 
-
-.imgjuice{
-width: 427px;
-height: 273px;
-padding: 20px;
-border-radius: 15px;
-
-  
+.imgjuice {
+  width: 427px;
+  height: 273px;
+  padding: 20px;
+  border-radius: 15px;
 }
 
 /* Social Container Styles */
@@ -886,9 +937,6 @@ border-radius: 15px;
   width: 427px;
   border-radius: 15px;
   color: rgba(20, 20, 20, 0.3);
-
-
-  
 }
 
 .social-image img {
@@ -896,14 +944,13 @@ border-radius: 15px;
   height: 273px;
   object-fit: cover;
   border-radius: 15px;
-
 }
 
 .social-content {
   margin-top: auto;
   width: 357px;
   height: 111px;
-  gap: 15px;;
+  gap: 15px;
 }
 
 .social-text {
@@ -915,23 +962,18 @@ border-radius: 15px;
   font-weight: 600;
   line-height: 20px;
   letter-spacing: -0.015em;
-  
-
-  
 }
 
 .social-links {
-  color: #fbfbfb; ;
+  color: #fbfbfb;
   font-size: 1.1em;
-font-size: 32px;
-font-weight: 600;
-line-height: 32px;
-letter-spacing: -0.015em;
-gap:12px;
-margin-top: 20px;
-width: 357px;
-
-
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 32px;
+  letter-spacing: -0.015em;
+  gap: 12px;
+  margin-top: 20px;
+  width: 357px;
 }
 
 .social-link {
@@ -951,17 +993,16 @@ width: 357px;
 }
 
 /* Responsive Design */
-@media screen and (min-width:48opx) and (min-width:768px) {
+@media screen and (min-width: 48opx) and (min-width: 768px) {
   .boxes-container {
-      flex-direction: column;
+    flex-direction: column;
   }
-  
+
   .form-container,
   .social-container {
-      width: 100%;
+    width: 100%;
   }
-  .first-div{
+  .first-div {
     flex-direction: column;
   }
 }
-
