--- a/css/styles.css
+++ b/css/styles.css
@@ -510,51 +510,55 @@ body {
 
 .reviews-section {
   background-color: #fbfbfb;
-  padding: 100px;
+  padding: 80px 20px 80px 20px;
+  gap: 40px;
 }
 
 .reviews-content {
-    display: flex;
-    flex-direction: column;
-    max-width: 553px;
-    color: #141414;
+width: 335px;
+gap: 20px;
+display: flex;
+flex-direction: column;
+max-width: 553px;
+color: #141414;
 }
 
 .reviews-title {
-  width: 553px;
-    font-weight: 600;
-    font-size: 64px;
-    letter-spacing: -0.96px;
-    text-transform: uppercase;
-    line-height: 64px;
+  font-weight: 600;
+  font-size: 48px;
+  letter-spacing: -0.96px;
+  text-transform: uppercase;
+  line-height: 50px;
 }
 
 .reviews-subtitle {
-    margin-top: 25px;
-    font: 500 16px/20px "Inter Tight", -apple-system, Roboto, Helvetica, sans-serif;
+  margin-top: 25px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .reviews-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    margin-top: 50px;
+display: flex;
+flex-direction: column;
+gap: 18px;
+margin-top: 50px;
 }
 
 .review-card {
-    border-radius: 24px;
-    background-color: #fbfbfb;
-    border: 1px solid rgba(122, 49, 69, 0.3);
-    padding: 20px;
-    width: 343px;
-    min-height: 258px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+border-radius: 24px;
+background-color: #fbfbfb;
+border: 1px solid rgba(122, 49, 69, 0.3);
+padding: 20px 16px 20px 16px;
+width: 100%;
+width: 335x;
+display: none;
+flex-direction: column;
+align-items: center;
 }
 
 .review-card:first-child {
-  display: flex;
+display: flex;
 }
 
 .review-image {
@@ -590,20 +594,8 @@ body {
   color: #576f35;
 }
 
-@media (max-width: 991px) {
-    .reviews-section {
-        padding: 0 20px;
-    }
 
-    .reviews-title {
-        font-size: 40px;
-        line-height: 44px;
-    }
 
-    .reviews-grid {
-        margin-top: 40px;
-    }
-}
 
 /* CSS */
 .harvest-container {
