--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Genel ayarlar */
 *,
 *::before,
 *::after {
@@ -13,15 +14,16 @@ body {
   justify-content: center;
 }
 
+
 .container {
-  width: 375px;
+  width: 320px;
   margin: 0 auto;
 }
 
 .header-container {
   background-color: #576f35;
   height: 80px;
-  padding: 0 20px; 
+  padding: 0 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,22 +35,22 @@ body {
   display: none;
 }
 
-.navbar{
+.navbar {
   display: flex;
-  gap: 100px;
+  gap: 50px;
 }
 
 .menu-toggle:checked ~ .navbar-ul {
   left: 37%;
-  width: 375px;
+  width: 320px;
   height: 896px;
   visibility: inherit;
 }
 
 .navbar-ul {
-  position: fixed; 
-  top: 0; 
-  left: -250px; 
+  position: fixed;
+  top: 0;
+  left: -250px;
   width: 250px;
   height: 100vh;
   background-color: #622133;
@@ -75,15 +77,15 @@ body {
 }
 
 .navcontainer {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   text-align: center;
   color: #fbfbfb;
 }
 
-.navbar-ul .shop-now{
+.navbar-ul .shop-now {
   position: fixed;
-  top: 722px;
+  top: 700px;
   left: 100px;
 }
 
@@ -110,7 +112,6 @@ body {
 
 .but-shop:hover {
   color: rgba(122, 49, 69, 0.7);
-  
 }
 
 .but-bar {
@@ -123,14 +124,14 @@ body {
 }
 
 .logo-svg {
-  margin-left: 0; 
-  margin-right: 20px; 
+  margin-left: 0;
+  margin-right: 20px;
   display: flex;
   align-items: center;
 }
 
 .close-menu {
-  display: none; 
+  display: none;
 }
 
 .menu-toggle:checked ~ .navbar-ul {
@@ -138,20 +139,19 @@ body {
 }
 
 .menu-toggle:checked ~ .navbar-ul .close-menu {
-  display: block; 
+  display: block;
   position: fixed;
-  top : 20px;
-  left: 323px;
+  top: 20px;
+  left: 300px;
 }
 
 .menu-toggle:checked ~ .but-bar {
-  display: none; 
+  display: none;
 }
 
 .navbar-ul {
-  position: fixed; 
- 
-  left: 130px; 
+  position: fixed;
+  left: 130px;
   width: 250px;
   height: 886px;
   background-color: #622133;
@@ -159,24 +159,21 @@ body {
   flex-direction: column;
   align-items: center;
   transition: left 0.3s ease;
-  z-index: 20; 
+  z-index: 20;
   gap: 8px;
-
 }
 
 .navbar-ul .close-icon {
   cursor: pointer;
-  margin: 20px 0; 
+  margin: 20px 0;
 }
 
-.navbar-ul .how-it{
-    margin-top: 240px;
+.navbar-ul .how-it {
+  margin-top: 240px;
 }
-
-
 
 .first-section .title {
-  font-size: 48px;
+  font-size: 40px;
   text-transform: uppercase;
   font-weight: bold;
   color: #fbfbfb;
@@ -197,20 +194,20 @@ body {
   flex-direction: column;
   gap: 128px;
   font-family: "Inter Tight", sans-serif;
-  padding-right: 100px;
+  padding-right: 50px;
   padding-bottom: 50px;
   background: none;
 }
 
 .title {
   font-weight: 600;
-  font-size: 48px;
+  font-size: 40px;
   line-height: 1;
   color: #fbfbfb;
   text-align: left;
   width: 335px;
   height: 192px;
-  margin-left: 25px;
+  margin-left: 15px;
 }
 
 .explain {
@@ -221,24 +218,39 @@ body {
   width: 335px;
   height: 90px;
   margin-top: -90px;
-  margin-left: 25px;
+  margin-left: 15px;
 }
 
 .background-wrapper {
-  background-size: 375px 100%;
+  background-size: 320px 100%;
   background-color: #576f35;
   padding-top: 32px;
   position: relative;
 }
 
-.header-container,
-.first-div {
-  background: none;
+/* 375px ve üzeri için */
+@media (min-width: 375px) {
+  .container {
+    width: 375px;
+  }
+
+  .background-wrapper {
+    background-size: 375px 100%;
+  }
+
+  .menu-toggle:checked ~ .navbar-ul {
+    left: 37%;
+    width: 375px;
+    height: 896px;
+  }
 }
+
+
+
 
 .organic-vegatables {
   background-color: #7a3145;
-  padding: 80px 20px 80px 20px;
+  padding: 80px 20px;
   gap: 40px;
 }
 
@@ -273,8 +285,8 @@ body {
   font-size: 14px;
   line-height: 18px;
   color: #fbfbfb;
-  margin-top: 4.063em;
-  margin-bottom: 4.063em;
+  margin-top: 65px;
+  margin-bottom: 65px;
 }
 
 .products-list {
@@ -292,7 +304,7 @@ body {
   background-color: #fbfbfb;
   border-radius: 40px;
   width: 334px;
-  padding: 32px 26px 32px 26px;
+  padding: 32px 26px;
   gap: 10px;
   box-sizing: border-box;
 }
@@ -304,7 +316,7 @@ body {
   letter-spacing: -1.5%;
   color: #7a3145;
   gap: 12px;
-  margin-bottom: 5%;
+  margin-bottom: 20px;
 }
 
 .product-card > p {
@@ -315,6 +327,7 @@ body {
   color: #141414;
   gap: 12px;
 }
+
 
 .organic-up-to {
   padding: 100px;
@@ -338,14 +351,7 @@ body {
   color: #fbfbfb;
 }
 
-.footer {
-  display: flex;
-  flex-direction: column;
-  font-family: Inter Tight, sans-serif;
-  justify-content: start;
-  padding: 50px 100px;
-  background-color: #7a3145;
-}
+
 /* section2 css başlangıç */
 
 .section-second {
@@ -510,17 +516,17 @@ body {
 
 .reviews-section {
   background-color: #fbfbfb;
-  padding: 80px 20px 80px 20px;
+  padding: 80px 20px;
   gap: 40px;
 }
 
 .reviews-content {
-width: 335px;
-gap: 20px;
-display: flex;
-flex-direction: column;
-max-width: 553px;
-color: #141414;
+  width: 335px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 553px;
+  color: #141414;
 }
 
 .reviews-title {
@@ -539,26 +545,24 @@ color: #141414;
 }
 
 .reviews-grid {
-display: flex;
-flex-direction: column;
-gap: 18px;
-margin-top: 50px;
+  display: flex;
+  gap: 18px;
+  margin-top: 50px;
 }
 
 .review-card {
-border-radius: 24px;
-background-color: #fbfbfb;
-border: 1px solid rgba(122, 49, 69, 0.3);
-padding: 20px 16px 20px 16px;
-width: 100%;
-width: 335x;
-display: none;
-flex-direction: column;
-align-items: center;
+  border-radius: 24px;
+  background-color: #fbfbfb;
+  border: 1px solid rgba(122, 49, 69, 0.3);
+  padding: 20px 16px;
+  width: 335px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
 }
 
 .review-card:first-child {
-display: flex;
+  display: flex;
 }
 
 .review-image {
@@ -589,6 +593,7 @@ display: flex;
   line-height: 22px;
   margin-top: 8px;
 }
+
 
 .highlight {
   color: #576f35;
@@ -667,33 +672,7 @@ display: flex;
   padding-right: 24px;
 }
 
-.menu-contact {
-  display: flex;
-  align-items: start;
-  gap: 40px 302px;
-  color: rgba(251, 251, 251, 1);
-  justify-content: start;
-  flex-wrap: wrap;
-}
 
-.logo-text {
-  display: flex;
-  min-width: 240px;
-  flex-direction: column;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  justify-content: start;
-  width: 265px;
-}
-
-.img-logo {
-  aspect-ratio: 10.75;
-  object-fit: contain;
-  object-position: center;
-  width: 194px;
-  max-width: 100%;
-}
 
 .harvest-container {
   background-color: #7a3145;
@@ -707,7 +686,6 @@ display: flex;
   font-size: 48px;
   font-weight: 600;
   line-height: 48px;
-  line-height: -1.2;
   letter-spacing: -1.5%;
   gap: 25px;
   margin-top: 80px;
@@ -716,6 +694,7 @@ display: flex;
   margin-bottom: 29px;
   text-align: left;
 }
+
 .content-wrapper {
   text-align: left;
 }
@@ -736,14 +715,11 @@ display: flex;
 .description {
   width: 335px;
   height: 72px;
-  opacity: 0px;
   margin-bottom: 30px;
   max-width: 800px;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.3;
-
-  margin-bottom: 50px;
   font-family: "Inter Tight", sans-serif;
   color: #fbfbfb;
   text-align: left;
@@ -755,7 +731,6 @@ display: flex;
   flex-wrap: wrap;
   border-radius: 30px;
   width: 335px;
-  
 }
 
 .form-container {
@@ -773,14 +748,12 @@ display: flex;
   line-height: 26px;
   width: 295px;
   height: 130px;
-  gap: 0px;
-  opacity: 0px;
-  font-weight: 600px;
+  gap: 0;
+  font-weight: 600;
   font-family: "Inter Tight", sans-serif;
   letter-spacing: -1.5%;
   margin-left: 25px;
   text-align: left;
-  align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
 }
@@ -794,14 +767,8 @@ display: flex;
   color: #576f35;
   letter-spacing: -1.5%;
 }
-.form-input::placeholder {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: -0.02em;
-  color: #141414;
-}
 
+.form-input::placeholder,
 .form-textarea::placeholder {
   font-size: 16px;
   font-weight: 500;
@@ -809,6 +776,7 @@ display: flex;
   letter-spacing: -0.02em;
   color: #141414;
 }
+
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -820,6 +788,7 @@ display: flex;
 .form-group {
   gap: 10px;
 }
+
 .form-input {
   width: 295px;
   height: 46px;
@@ -859,20 +828,16 @@ display: flex;
   transition: background-color 0.3s;
   width: 295px;
   height: 50px;
-  gap: 10px;
   border-radius: 30px;
-  opacity: 0px;
   font-size: 18px;
   font-weight: 600;
   line-height: 20px;
   letter-spacing: -0.015em;
   font-family: "Inter Tight", sans-serif;
-  padding-bottom: 16px;
   margin-bottom: 40px;
 }
 
 .imgjuice {
-  
   align-items: center;
   border-radius: 15px;
 }
@@ -894,8 +859,6 @@ display: flex;
   margin-bottom: 20px;
   border-radius: 15px;
   overflow: hidden;
- 
-  border-radius: 15px;
   color: rgba(20, 20, 20, 0.3);
 }
 
@@ -904,7 +867,6 @@ display: flex;
   height: 273px;
   object-fit: contain;
   border-radius: 15px;
-
 }
 
 .social-content {
@@ -923,20 +885,18 @@ display: flex;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: -0.015em;
-  font-family:"Inter Tight",sans-serif ;
-
+  font-family: "Inter Tight", sans-serif;
 }
 
 .social-links {
   color: #fbfbfb;
   font-size: 24px;
   font-weight: 600;
-  line-height: 1.2px;
+  line-height: 1.2;
   letter-spacing: -1.5%;
-  gap: 12px;
   width: 357px;
-  font-family:"Inter Tight",sans-serif ;
-  height:60px;
+  font-family: "Inter Tight", sans-serif;
+  height: 60px;
 }
 
 .social-link {
@@ -946,41 +906,59 @@ display: flex;
   font-weight: 600;
   line-height: 32px;
   font-size: 24px;
-
 }
 
 .social-link:hover {
   opacity: 0.8;
 }
+
 .footer {
-  width: 375px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 40px;
   padding-bottom: 40px;
   gap: 80px;
-  position:relative;
+  position: relative;
   margin: 0 auto;
-  
+  background-color: #7A3145;
 }
+
 .menu-contact {
   display: flex;
-  width: 296px;
-  height: 344px;
-  gap: 40px;
-}
-.footer-menu{
-  font-family:"Inter Tight",sans-serif ;
-  font-size:28px ;
-  font-weight:600px ;
-
+  align-items: start;
+  gap: 40px 302px;
+  
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
 .logo-text {
-  width: 296px;
-  height: 84px;
+  display: flex;
+  min-width: 240px;
+  flex-direction: column;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  justify-content: start;
+  width: 265px;
   gap: 14px;
+  color: rgba(251, 251, 251, 1);
 }
+
+.img-logo {
+  aspect-ratio: 10.75;
+  object-fit: contain;
+  object-position: center;
+  width: 194px;
+  max-width: 100%;
+}
+
+.footer-menu {
+  font-family: "Inter Tight", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+}
+
 .block-footer {
   width: 215px;
   height: 220px;
@@ -991,54 +969,49 @@ display: flex;
   width: 296px;
   height: 54px;
   font-family: "Inter Tight", sans-serif;
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.2;
   color: #fbfbfb;
-  
 }
 
-
-.nav-footer .footer-menu{
-  font-family: "Inter Tight",sans-serif;
-  font-size:28px;
-  font-weight:600px ;
-  line-height:1.5;
+.nav-footer .footer-menu {
+  font-family: "Inter Tight", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 1.5;
   letter-spacing: -1.5%;
   list-style-type: none;
-  
-}
-.contacts-footer{
-  
-  font-family:"Inter Tight",sans-serif;
-  font-weight: 600px;
-  font-size: 14px;
-  margin-top:40px;
-  text-decoration: none;
-  
- 
- 
-  
-}
-.address,
-.phone{
-  text-decoration: none;
- 
-  color:#fbfbfb;
-  width: 215px;
-  height: 68px;
-   
+  color: #fbfbfb;
 }
 
-.contact-items{
-  padding-bottom:14px;
-  list-style-type: none;
-  
+.contacts-footer {
+  font-family: "Inter Tight", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-decoration: none;
 }
-.privacy-policy{
+
+.address,
+.phone {
+  text-decoration: none;
+  color: #fbfbfb;
+  width: 215px;
+  height: 68px;
+}
+
+.contact-items {
+  padding-bottom: 14px;
+  list-style-type: none;
+}
+
+.privacy-policy {
   width: 335px;
   height: 16px;
-  gap:49px;
+  gap: 49px;
+  margin-top: 40px;
 }
 
 .contacts-footer a:link {
@@ -1065,7 +1038,6 @@ a:active {
   display: flex;
   align-items: center;
   gap: 8px;
-  
 }
 
 .privacy-policy {
@@ -1082,41 +1054,302 @@ a:active {
 
 
 
-@media (min-width:769px ) and (max-width:1279px) {
 
-  *,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+/* Tablet (768px ve üzeri) */
+@media (min-width: 768px) {
+  .container {
+    width: 100%;
+  }
 
-body {
-  font-family: "Inter Tight", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  justify-content: center;
-}
+
+  .header-container {
+    background-color: #576f35;
+    height: 80px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+  }
+
+  .navbar {
+    gap: 150px;
+  }
+
+  .navbar-ul {
+    left: -300px;
+    width: 300px;
+  }
+
+  .first-section .title {
+    font-size: 48px;
+  }
+
+  .title {
+    font-size: 48px;
+    margin-left: 25px;
+  }
+
+  .explain {
+    font-size: 16px;
+    margin-left: 25px;
+  }
+  .organic-vegatables {
+    padding: 100px 32px 100px 32px;
+    gap: 50px;
+  }
+
+  .main-text {
+    font-size: 64px;
+    line-height: 64px;
+  }
+
+  .info-text{
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .products-list{
+    width: 704px;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  .product-card{
+    width: 342px;
+  }
+
+  .reviews-content {
+    width: 768px;
+    padding: 100px 32px 100px 32px;
+    gap: 10px;
+  }
+
+  .reviews-title {
+    width: 553px;
+    font-size: 64px;
+    line-height: 64px;
+  }
+
+  .reviews-subtitle {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .review-card {
+    width: 343px;
+    display: block;
+  }
+  .review-card:nth-child(n+3) {
+    display: none;
+  }
+
+  .review-text {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .harvest-container{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    gap: 50px;
+  }
+
+    .main-title {
+      width: 640px;
+      font-size: 64px;
+      line-height: 64px;
+    }
   
+    .description {
+      width: 640px;
+      font-size: 16px; 
+      line-height: 20px;
+    }
+
+    .form-container{
+      width: 628px;
+      padding: 50px 100px 50px 100px;
+      gap: 10px;
+    }
+  
+    .form-input,
+    .form-textarea {
+      width: 428px;
+    }
+  
+    .social-container {
+      width: 628px;
+      padding: 50px;
+      gap: 50px;
+    }
+  
+    .social-image img {
+      width: 528px;
+    }
+
+    .social-text{
+      font-size: 18px;
+      line-height: 20px;
+    }
+
+    .social-links{
+      width: 492px;
+      font-size: 32px;
+      line-height: 32px;
+      display: flex;
+    }
+
+    .footer {
+    
+      padding: 32px;
+      gap: 100px;
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .footer-text {
+      width: 265px;
+      display: flex;
+      
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+    .footer-menu{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .nav-footer{
+      display: block;
+    }
+
+    .footer-menu > li{
+      font-size: 32px;
+      line-height: 32px;
+    }
+  
+    .logo-text {
+      width: 400px;
+    }
+
+    .block-4{
+      width: 248px;
+      gap: 8px;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 20px;
+      color: rgba(251, 251, 251, 0.5);
+
+    }
+  
+    .contact-items {
+      width: 500px;
+    }
+  
+    .privacy-policy {
+      width: 600px;
+    }
+  
+  
+  
+  
+
+
 }
 
-
-
+/* Masaüstü (1280px ve üzeri) */
 @media (min-width: 1280px) {
-  
-  *,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+  .container {
+    width: 1280px;
+  }
 
-body {
-  font-family: "Inter Tight", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  justify-content: center;
-}
+  .navbar {
+    gap: 200px;
+  }
+
+  .first-div {
+    padding-right: 150px;
+  }
+
+  .title {
+    font-size: 64px;
+  }
+
+  .explain {
+    font-size: 18px;
+  }
+
+  .reviews-content {
+    width: 900px;
+  }
+
+  .reviews-title {
+    font-size: 72px;
+    line-height: 76px;
+  }
+
+  .reviews-subtitle {
+    font-size: 18px;
+  }
+
+  .review-card {
+    width: 800px;
+  }
+
+  .review-text {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .main-title {
+    width: 800px;
+  }
+
+  .description {
+    width: 800px;
+  }
+
+  .form-input,
+  .form-textarea {
+    width: 700px;
+  }
+
+  .social-container {
+    width: 800px;
+  }
+
+  .social-image img {
+    width: 700px;
+  }
+
+  .footer {
+    width: 800px;
+  }
+
+  .footer-text {
+    width: 700px;
+  }
+
+  .logo-text {
+    width: 600px;
+  }
+
+  .contact-items {
+    width: 700px;
+  }
+
+  .privacy-policy {
+    width: 800px;
+  }
+
+
+
 }
